--- a/index.html
+++ b/index.html
@@ -6,3 +6,7 @@ html
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TaskFlow - Система управления задачами</title>
   
+<body>
+<a href="https://www.figma.com/proto/upv5mlPrAI6rZwmPJMPegJ/Untitled?node-id=1-2&p=f&t=yAaH1QUZfB0gRCb8-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">Прототип на фигма</a>
+	
+</body>
