--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ html
 	<title>TaskFlow - Система управления задачами</title>
   
 <body>
+	<a target="_top" href="https://www.flamingtext.com/" ><img src="https://blog.flamingtext.com/blog/2025/10/25/flamingtext_com_1761374731_669785419.gif" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
+<br/>Logo Design by <a href="https://www.flamingtext.com/" >FlamingText.com</a>
+
 <a href="https://www.figma.com/proto/upv5mlPrAI6rZwmPJMPegJ/Untitled?node-id=1-2&p=f&t=yAaH1QUZfB0gRCb8-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">Прототип на фигма</a>
 	
 </body>
