--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
     </svg>
 </a>
 
-<a href="https://jsitor.com" target="_blank" rel="noopener noreferrer" class="modern-link">
+<a href="https://mavstevic-dev.github.io/framer/">
   <svg class="link-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
     <path d="M13.5 10.5L21 3M16 3h5v5M21 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5" stroke-width="2"/>
   </svg>
@@ -794,3 +794,4 @@
   transform: translateX(3px);
 }
 </style>
+
